# Vyakhya

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.sh  skills-lock.json
.githooks/: pre-commit
backend/: README.md  alembic.ini  pyproject.toml
backend/tests/: test_agno.py  test_auth.py  test_config.py  test_mappers.py  test_pipeline_and_editor.py  test_probe.py  test_schemas.py  test_security.py
backend/vyakhya/: __init__.py  enums.py  main.py  seed.py  utils.py  worker.py
backend/vyakhya/agents/: agno_executor.py  context.py  crew.py  custom_model.py  events.py  executor.py  model_factory.py  pipeline.py  prompt_registry.py  schema.py  schemas.py  simulated.py  skills.py  workflow.py
backend/vyakhya/agents/prompts/: designer-system.md  idea-system.md  planner-system.md  researcher-system.md  reviewer-system.md  scene-creator-system.md  verifier-system.md
backend/vyakhya/agents/steps/: __init__.py  assemble.py  design.py  idea.py  ingest.py  outline.py  plan.py  research.py  review.py
backend/vyakhya/api/: deps.py  router.py  sse.py
backend/vyakhya/api/routes/: connections.py  editor.py  pipeline.py  projects.py  prompts.py  render.py
backend/vyakhya/core/: auth.py  config.py  database.py  events.py  logging.py  security.py
backend/vyakhya/db/: base.py  types.py
backend/vyakhya/db/migrations/: env.py
backend/vyakhya/db/migrations/versions/: 853543e29367_project_tts_enabled.py  a1c9e4d2b7f0_project_paper_text.py  b8d46f50707c_initial_schema.py  d4f8a1c03b52_project_prompt_figures_orbit3d.py  e7a2c9d51b04_agent_settings.py  f3b7d82ac915_parser_agent_role.py  ff44faad667c_provider_kind_and_settings.py
backend/vyakhya/db/models/: __init__.py  config.py  pipeline.py  project.py  render.py
backend/vyakhya/schemas/: common.py  config.py  pipeline.py  project.py  render.py
backend/vyakhya/services/: connections.py  crypto.py  editor.py  figures.py  mappers.py  pipeline.py  probe.py  projects.py  prompts.py  render.py  render_client.py  storage.py  tts.py
docs/: api.md  architecture.md  db-schema.md  ideation.md
frontend/: Dockerfile  README.md  package.json  serve.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
render/: Dockerfile  (+3 more)
(+35 files in other folders)
