[project]
name = "vyakhya-backend"
version = "0.1.0"
description = "Vyakhya Studio backend — multi-agent paper-to-video engine (FastAPI + Agno)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vyakhya"]
