[project]
name = "vyakhya-backend"
version = "0.1.0"
description = "Vyakhya Studio backend — multi-agent paper-to-video engine (FastAPI + Agno)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "procrastinate>=3.0.0",
    # procrastinate's CLI/worker uses psycopg; [binary] bundles libpq for slim images.
    "psycopg[binary]>=3.2.0",
    "cryptography>=44.0.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
# Heavy agent runtime — kept optional so the core API installs fast.
# Enable with: uv sync --extra agents
agents = [
    "agno>=2.7.0",
    # Provider SDKs Agno lazy-imports per model class. LLM providers:
    "openai>=1.60.0",       # OpenAI + Groq (OpenAI-compatible) + generic base_url
    "anthropic>=0.45.0",
    "google-genai>=1.0.0",  # Gemini
    "ollama>=0.4.0",
    # PDF ingestion for the ingestor agent.
    "pypdf>=5.1.0",
    # Figure extraction (page-image crops) for the ingestor stage.
    "pymupdf>=1.25.0",
    # Web research tools for the comprehension agent (Agno lazy-imports these).
    "ddgs>=9.0.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vyakhya"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
